--- a/style/style.css
+++ b/style/style.css
@@ -36,3 +36,95 @@ body{
     border: none;
     margin-top: 100px;
 }
+
+/*Why Web Development??*/
+
+.why-web-dev-container{
+    max-width: 1440PX;
+    height: 300PX;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+    
+}
+.why-web-dev-container-text{
+    
+    width: 50%;
+    border: 2px solid green;
+    height: 300px;
+
+}
+.why-web-dev-container-image{
+    width: 50%;
+    border: 2px solid green;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+.why-web-dev-container button{
+    padding: 15px 15px;
+    font-size: large;
+    font-weight: 6  00;
+    border: 1px solid;
+}
+
+/*my-nspiration*/
+.my-nspiration{
+    padding: 30px;
+    /*box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.15);*/
+    justify-content: center;
+    align-content: center;
+}
+
+/* skills section*/
+
+.what-i-do-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.what-i-do{
+    padding: 30px;
+    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.15);
+    
+}
+.text-center{
+    text-align: center;
+}
+.current-target-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.current-target-description{
+    font-size: 18px;
+    color: #757575;
+}
+.current-target-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.current-target{
+
+    
+    
+}
+.learn-more{
+    color: black;
+        margin-top: 30px;
+    padding-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+a{
+    line-height: 50px;
+    font-size: large;
+    font-weight: 700;
+}
