--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,11 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
+}
+.banner-container2{
+    display: flex;
+    justify-content: center;
 }
 .banner-content{
     text-align: center;
@@ -42,7 +47,7 @@ body{
 .why-web-dev-container{
     max-width: 1440PX;
     height: 300PX;
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -52,13 +57,13 @@ body{
 .why-web-dev-container-text{
     
     width: 50%;
-    border: 2px solid green;
+    /*border: 2px solid green;*/
     height: 300px;
 
 }
 .why-web-dev-container-image{
     width: 50%;
-    border: 2px solid green;
+    /*border: 2px solid green;*/
     height: 300px;
     display: flex;
     justify-content: center;
@@ -71,6 +76,12 @@ body{
 }
 
 /*my-nspiration*/
+.jhankar{
+    margin: 0 auto;
+    margin-top: 30px;
+    justify-content: center;
+    margin-left: 100px;
+}
 .my-nspiration{
     padding: 30px;
     /*box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.15);*/
@@ -169,4 +180,8 @@ a{
     border-radius: 5px;
     border: none;
     margin-top: 100px;
+}
+.footer{
+    margin-top: 30px;
+    display: inline;
 }
