--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ body{
 .banner-container{
     width: 1440px;
     min-height: 652px;
-    background-image: url(/assets/Hero-bg.png);
+    background-image: url(../assets/Hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
