--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ body{
 .banner-container{
     width: 1440px;
     min-height: 652px;
-    background-image: url(./assets/Hero-bg.png);
+    background-image: url(../assets/Hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -151,7 +151,7 @@ a{
 .support-container{
     width: 1940px;
     min-height: 400px;
-    background-image: url(./assets/handshake.jpg);
+    background-image: url(../assets/handshake.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
